--- a/_includes/skip-links.html
+++ b/_includes/skip-links.html
@@ -1,4 +1,4 @@
-<nav class="skip-links">
+<nav class="skip-link">
   <ul>
     <li><a href="#site-nav" class="screen-reader-shortcut">{{ site.data.ui-text[site.locale].skip_primary_nav | default: 'Skip to primary navigation' }}</a></li>
     <li><a href="#main" class="screen-reader-shortcut">{{ site.data.ui-text[site.locale].skip_content | default: 'Skip to content' }}</a></li>
