--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,26 +15,30 @@
   </head>
 
   <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
-    {% include_cached skip-links.html %}
-    {% include_cached masthead.html %}
+    <div style="display: flex; flex: 1;">
+      {% include_cached skip-links.html %}
+      {% include_cached sidebar.html%}
+      <div class="main_container">
+        {% include_cached masthead.html %}
 
-    <div class="initial-content">
-      {{ content }}
-    </div>
+        <div class="initial-content">
+          {{ content }}
+        </div>
 
-    {% if site.search == true %}
-      <div class="search-content">
-        {% include_cached search/search_form.html %}
+        {% if site.search == true %}
+        <div class="search-content">
+          {% include_cached search/search_form.html %}
+        </div>
+        {% endif %}
+
+        <div id="footer" class="page__footer">
+          <footer>
+            {% include footer/custom.html %}
+            {% include_cached footer.html %}
+          </footer>
+        </div>
       </div>
-    {% endif %}
-
-    <div id="footer" class="page__footer">
-      <footer>
-        {% include footer/custom.html %}
-        {% include_cached footer.html %}
-      </footer>
     </div>
-
     {% include scripts.html %}
 
   </body>
