--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -16,28 +16,28 @@
   //   transform: translate3d(0, 0, 0);
   // }
 
+  background: #202020;
+  text-align: center;
+  display: none;
+  visibility: hidden;
+
   @include breakpoint($large) {
     float: left;
-    width: calc(#{$right-sidebar-width-narrow} - 1em);
-    opacity: 0.75;
-    -webkit-transition: opacity 0.2s ease-in-out;
-    transition: opacity 0.2s ease-in-out;
-
-    &:hover {
-      opacity: 1;
-    }
+    width: 18rem;
+    height: 100vh;
+    display: block;
+    visibility: visible;
 
     &.sticky {
-      overflow-y: auto;
-      /* calculate height of nav list
-         viewport height - nav height - masthead x-padding
-      */
-      max-height: calc(100vh - #{$nav-height} - 2em);
+	    position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  align-self: flex-start;
     }
   }
 
   @include breakpoint($x-large) {
-    width: calc(#{$right-sidebar-width} - 1em);
+    width: 18rem;
   }
 
   > * {
@@ -54,7 +54,9 @@
     font-family: $sans-serif-narrow;
   }
 
-  p,
+  p {
+    color: rgba(255,255,255,.5);
+  }
   li {
     font-family: $sans-serif;
     font-size: $type-size-6;
@@ -142,7 +144,7 @@
   }
 }
 
-.author__content {
+.sidebar .author__content {
   display: table-cell;
   vertical-align: top;
   padding-left: 15px;
@@ -171,26 +173,33 @@
   }
 }
 .sidebar .author__name {
-  font-family: $sans-serif;
-  font-size: $type-size-5;
+  font-size: $type-size-1;
+  font-family: "Abril Fatface", serif;
+  color: #fff;
 }
 
-.author__bio {
-  margin: 0;
+.sidebar .author__bio {
+  // margin: 0;
+  padding: 10px;
 
   @include breakpoint($large) {
     margin-top: 10px;
     margin-bottom: 20px;
   }
+
+  a {
+    color: #fff;
+  }
 }
 
-.author__urls-wrapper {
+.sidebar .author__urls-wrapper {
   position: relative;
   display: table-cell;
   vertical-align: middle;
   font-family: $sans-serif;
   z-index: 20;
   cursor: pointer;
+  text-align: left;
 
   li:last-child {
     a {
@@ -201,6 +210,7 @@
   .author__urls {
     span.label {
       padding-left: 5px;
+      color: #fff;
     }
   }
 
@@ -236,7 +246,7 @@
   }
 }
 
-.author__urls {
+.sidebar .author__urls {
   display: none;
   position: absolute;
   right: 0;
