--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -211,6 +211,16 @@ body:hover .visually-hidden button {
     color: $text-color;
   }
 
+  .fa-scholar {
+    content: url('assets/images/google-scholar.svg');
+    height: 1em;
+    width: auto;
+  }
+
+  .fa-envelope-square {
+    color: $mail-color;
+  }
+
   .fa-behance,
   .fa-behance-square {
     color: $behance-color;
