--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
 -->
 <html lang="{{ site.locale | slice: 0,2 | default: "en" }}" class="no-js">
   <head>
+    {% if page.use_mathjax %}{% include mathjax.html %}{% endif %}
     {% include head.html %}
     {% include head/custom.html %}
   </head>
