--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -26,12 +26,12 @@
     padding-right: 1rem;
     position: absolute;
     right: 1rem;
-    bottom: 1rem;
+    bottom: 0rem;
     left: 1rem;
     text-align: left;
   }
 
-  @include breakpoint($large) {
+  @include breakpoint($medium) {
     float: left;
     width: 18rem;
     height: 100vh;
@@ -39,20 +39,24 @@
     visibility: visible;
 
     &.sticky {
-	    position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  align-self: flex-start;
+      position: -webkit-sticky;
+      position: sticky;
+      top: 0;
+      align-self: flex-start;
     }
   }
 
-  @include breakpoint($x-large) {
-    width: 18rem;
-  }
+  .sidebar-copyright {
+    a {
+      color: #ffffff;
+      text-decoration: none;
+    }
 
-  > * {
-    margin-top: 1em;
-    margin-bottom: 1em;
+    p {
+      color: rgba(255,255,255,.5);
+      font-size: $type-size-6;
+      font-weight: 300;
+    }
   }
 
   h2,
@@ -64,14 +68,8 @@
     font-family: $sans-serif-narrow;
   }
 
-  p {
-    color: rgba(255,255,255,.5);
-    font-size: $type-size-5;
-    font-weight: 300;
-  }
   li {
     font-family: $sans-serif;
-    font-size: $type-size-6;
     line-height: 1.5;
   }
 
@@ -139,7 +137,7 @@
   width: 36px;
   height: 36px;
 
-  @include breakpoint($large) {
+  @include breakpoint($medium) {
     display: block;
     width: auto;
     height: auto;
@@ -149,7 +147,7 @@
     max-width: 110px;
     border-radius: 50%;
 
-    @include breakpoint($large) {
+    @include breakpoint($medium) {
       padding: 5px;
       border: 1px solid $border-color;
     }
@@ -163,7 +161,7 @@
   padding-right: 25px;
   line-height: 1;
 
-  @include breakpoint($large) {
+  @include breakpoint($medium) {
     display: block;
     width: 100%;
     padding-left: 0;
@@ -179,7 +177,7 @@
 .author__name {
   margin: 0;
 
-  @include breakpoint($large) {
+  @include breakpoint($medium) {
     margin-top: 10px;
     margin-bottom: 10px;
   }
@@ -195,13 +193,19 @@
   // padding: 10px;
   line-height: 1.5;
 
-  @include breakpoint($large) {
+  @include breakpoint($medium) {
     margin-top: 10px;
     margin-bottom: 20px;
   }
 
   a {
     color: #fff;
+  }
+
+  p {
+    color: rgba(255,255,255,.5);
+    font-size: $type-size-4;
+    font-weight: 300;
   }
 }
 
@@ -232,7 +236,7 @@
     }
   }
 
-  @include breakpoint($large) {
+  @include breakpoint($medium) {
     display: block;
   }
 
@@ -258,7 +262,7 @@
       }
     }
 
-    @include breakpoint($large) {
+    @include breakpoint($medium) {
       display: none;
     }
   }
@@ -281,7 +285,7 @@
     display: block;
   }
 
-  @include breakpoint($large) {
+  @include breakpoint($medium) {
     display: block;
     position: relative;
     margin: 0;
@@ -303,7 +307,7 @@
     border-color: $border-color transparent;
     z-index: 0;
 
-    @include breakpoint($large) {
+    @include breakpoint($medium) {
       display: none;
     }
   }
@@ -320,7 +324,7 @@
     border-color: $background-color transparent;
     z-index: 1;
 
-    @include breakpoint($large) {
+    @include breakpoint($medium) {
       display: none;
     }
   }
