--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -10,7 +10,7 @@ $doc-font-size: 16 !default;
 
 /* paragraph indention */
 $paragraph-indent: false !default; // true, false (default)
-$indent-var: 1.3em !default;
+$indent-var: 1.3rem !default;
 
 /* system typefaces */
 $serif: Georgia, Times, serif !default;
@@ -33,22 +33,22 @@ $header-font-family: $sans-serif !default;
 $caption-font-family: $serif !default;
 
 /* type scale */
-$type-size-1: 2.441em !default; // ~39.056px
-$type-size-2: 1.953em !default; // ~31.248px
-$type-size-3: 1.563em !default; // ~25.008px
-$type-size-4: 1.25em !default; // ~20px
-$type-size-5: 1em !default; // ~16px
-$type-size-6: 0.75em !default; // ~12px
-$type-size-7: 0.6875em !default; // ~11px
-$type-size-8: 0.625em !default; // ~10px
+$type-size-1: 2.441rem !default; // ~39.056px
+$type-size-2: 1.953rem !default; // ~31.248px
+$type-size-3: 1.563rem !default; // ~25.008px
+$type-size-4: 1.25rem !default; // ~20px
+$type-size-5: 1rem !default; // ~16px
+$type-size-6: 0.75rem !default; // ~12px
+$type-size-7: 0.6875rem !default; // ~11px
+$type-size-8: 0.625rem !default; // ~10px
 
 /* headline scale */
-$h-size-1: 1.563em !default; // ~25.008px
-$h-size-2: 1.25em !default; // ~20px
-$h-size-3: 1.125em !default; // ~18px
-$h-size-4: 1.0625em !default; // ~17px
-$h-size-5: 1.03125em !default; // ~16.5px
-$h-size-6: 1em !default; // ~16px
+$h-size-1: 1.563rem !default; // ~25.008px
+$h-size-2: 1.25rem !default; // ~20px
+$h-size-3: 1.125rem !default; // ~18px
+$h-size-4: 1.0625rem !default; // ~17px
+$h-size-5: 1.03125rem !default; // ~16.5px
+$h-size-6: 1rem !default; // ~16px
 
 /*
    Colors
@@ -144,11 +144,11 @@ $base0f: #ff5370 !default;
    Breakpoints
    ========================================================================== */
 
-$small: 600px !default;
-$medium: 768px !default;
-$medium-wide: 900px !default;
-$large: 1024px !default;
-$x-large: 1280px !default;
+$small: 38em !default;
+$medium: 48em !default;
+$medium-wide: 56em !default;
+$large: 64em !default;
+$x-large: 80em !default;
 $max-width: $x-large !default;
 
 /*
