Sidebar responsive with correct styles and icons

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,7 +16,7 @@
           {% include nav_list nav=page.sidebar.nav %}
         {% endif %}
       {% endif %}
-      <div class="sidebar-copyright"><p>&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a> using styles from the <a href="https://hyde.getpoole.com/" rel="nofollow">Hyde theme</a> and a structure inspired by <a href="https://jponttuset.cat/" rel="nofollow">Jordi Pont-Tuset's site</a>.</p></div>
+      <div class="sidebar-copyright"><p>&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com" target="_blank" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" target="_blank" rel="nofollow">Minimal Mistakes</a> using styles from the <a href="https://hyde.getpoole.com/" target="_blank" rel="nofollow">Hyde theme</a> and a structure inspired by <a href="https://jponttuset.cat/" target="_blank" rel="nofollow">Jordi Pont-Tuset's site</a>.</p></div>
     </div>
   </div>
 {% endif %}
