--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -18,25 +18,28 @@
 
   background: #202020;
   text-align: center;
-  display: none;
-  visibility: hidden;
+  display: block;
+  visibility: visible;
+  width: 100vw;
+  max-width: 100%;
 
   .sidebar-content {
     padding-left: 1rem;
     padding-right: 1rem;
-    position: absolute;
     right: 1rem;
     bottom: 0rem;
     left: 1rem;
-    text-align: left;
+
+    @include breakpoint($medium) {
+      position: absolute;
+      text-align: left;
+    }
   }
 
   @include breakpoint($medium) {
     float: left;
     width: 18rem;
     height: 100vh;
-    display: block;
-    visibility: visible;
 
     &.sticky {
       position: -webkit-sticky;
@@ -133,11 +136,12 @@
 
 .author__avatar {
   display: table-cell;
-  vertical-align: top;
+  vertical-align: middle;
   width: 36px;
   height: 36px;
 
   @include breakpoint($medium) {
+    vertical-align: top;
     display: block;
     width: auto;
     height: auto;
@@ -146,17 +150,12 @@
   img {
     max-width: 110px;
     border-radius: 50%;
-
-    @include breakpoint($medium) {
-      padding: 5px;
-      border: 1px solid $border-color;
-    }
   }
 }
 
 .sidebar .author__content {
   display: table-cell;
-  vertical-align: top;
+  vertical-align: middle;
   padding-left: 15px;
   padding-right: 25px;
   line-height: 1;
@@ -166,6 +165,7 @@
     width: 100%;
     padding-left: 0;
     padding-right: 0;
+    vertical-align: top;
   }
 
   a {
@@ -214,7 +214,7 @@
   display: table-cell;
   vertical-align: middle;
   font-family: $sans-serif;
-  z-index: 20;
+  z-index: 21;
   cursor: pointer;
   text-align: left;
 
@@ -262,7 +262,7 @@
       }
     }
 
-    @include breakpoint($medium) {
+    @include breakpoint($small) {
       display: none;
     }
   }
@@ -270,29 +270,28 @@
 
 .sidebar .author__urls {
   display: none;
-  position: absolute;
   right: 0;
   margin-top: 15px;
   padding: 10px;
   list-style-type: none;
-  border: 1px solid $border-color;
-  border-radius: $border-radius;
-  background: $background-color;
-  box-shadow: 0 2px 4px 0 rgba(#000, 0.16), 0 2px 10px 0 rgba(#000, 0.12);
   cursor: default;
+  box-shadow: 0 2px 4px 0 rgba(#000, 0.16), 0 2px 10px 0 rgba(#000, 0.12);
+  border-radius: $border-radius;
+  position: absolute;
+  background: #202020;
 
   &.is--visible {
     display: block;
   }
 
-  @include breakpoint($medium) {
+  @include breakpoint($small) {
     display: block;
-    position: relative;
     margin: 0;
     padding: 0;
     border: 0;
     background: transparent;
     box-shadow: none;
+    position: relative;
   }
 
   &:before {
@@ -307,7 +306,7 @@
     border-color: $border-color transparent;
     z-index: 0;
 
-    @include breakpoint($medium) {
+    @include breakpoint($small) {
       display: none;
     }
   }
@@ -324,7 +323,7 @@
     border-color: $background-color transparent;
     z-index: 1;
 
-    @include breakpoint($medium) {
+    @include breakpoint($small) {
       display: none;
     }
   }
@@ -351,6 +350,10 @@
     &:hover {
       text-decoration: underline;
     }
+  }
+
+  .social-icon {
+    color: #ffffff;
   }
 }
 
