--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -148,7 +148,7 @@
   }
 
   img {
-    max-width: 110px;
+    max-width: 130px;
     border-radius: 50%;
   }
 }
@@ -221,7 +221,7 @@
   li {
     line-height: 1.75;
     font-size: $type-size-5;
-}
+  }
 
   li:last-child {
     a {
@@ -272,7 +272,10 @@
   display: none;
   right: 0;
   margin-top: 15px;
-  padding: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 0px;
   list-style-type: none;
   cursor: default;
   box-shadow: 0 2px 4px 0 rgba(#000, 0.16), 0 2px 10px 0 rgba(#000, 0.12);
@@ -299,7 +302,7 @@
     content: "";
     position: absolute;
     top: -11px;
-    left: calc(50% - 10px);
+    left: calc(50% + 41px);
     width: 0;
     border-style: solid;
     border-width: 0 10px 10px;
@@ -316,7 +319,7 @@
     content: "";
     position: absolute;
     top: -10px;
-    left: calc(50% - 10px);
+    left: calc(50% + 41px);
     width: 0;
     border-style: solid;
     border-width: 0 10px 10px;
